--- a/theory.tex
+++ b/theory.tex
@@ -484,6 +484,7 @@ Assuming the dependence of the medium permittivity $\varepsilon(\omega,\kk)$ or 
 $$ \epsrn(\omega,\kk) = 1 + \chi_e(\omega) + \ii \gamma_{\text{e}}(\omega) \kk + [\alpha_{\text{e}}(\omega) \kk] \kk + \ldots, \label{eq_epssd1} $$
 \begin{equation} \murn(\omega,\kk) = 1 + \chi_m(\omega) + \ii \gamma_{\text{m}}(\omega) \kk + [\alpha_{\text{m}}(\omega) \kk] \kk + \ldots, \label{eq_musd1}\end{equation}
 where $\chi_{e,m}(\omega)$ are tensors of the second rank, $\gamma_{e,m}(\omega)$ of the third rank, $\alpha_{e,m}(\omega)$ of the fourth rank, and similarly for possible higher orders of expansion. After the corresponding number of matrix multiplication with $\kk$, they all yield rank-2 tensors that add up to form the rank-2 tensor of permittivity or permeability.
+In this customary symmetric approximation of local media, both the electric permittivity and permeability in Eq. (\ref{eq_eps_loc}) are composed of two terms, one caused by the immediate response of vacuum, and another by the response of matter. In nonlocal media, both functions depend on the wavevector $\kk$, making the solution of Maxwell equations more complicated.
 
 Note the response function for a local medium can be formally derived from its nonlocal formulation by replacing the spatial dependence by a Dirac delta function: %% TODO fix the sencence - it is in fact incorrect
 \begin{equation} \chi_e(t-\tau, \rr-\brho) = \delta^{3}(\rr-\brho) \; \chi_e(t-\tau), \label{eq_loc_chi}\end{equation}
@@ -493,16 +494,11 @@ $$ \epsrn(\omega,\kk) = 1 + \chi_e(\omega) = \epsrl(\omega), $$
 
 % TODO The exact shape of $\varepsilon(\omega, \kk)$ will be discussed later.
 %}}}
-\paragraph{Review of local medium parameters}%{{{
-%The trivial extension of the local medium description to the nonlocal one could consist in redefining both constitutive parameters as functions of frequency and wave vector: $\epsrl(\omega) \stackrel{?}{\rightarrow} \epsrn(\omega, \kk)$, $\mu_r(\omega) \stackrel{?}{\rightarrow} \mu_r(\omega, \kk)$, but this will not be used. 
-
-% TODO add böhne nägerl reker ulbrich: evidence of spatial dispersion in the dielectric response of continuum states in gaas, 183e WE-Heraeus-Seminar nonlin opt and excit kinetics, noeks, graal-muritz 1997, Germany
-%}}}
-\paragraph{Magnetic effects can be described by electric displacement}%{{{
+\paragraph{Magnetic effects can be described by electric displacement} %{{{
 \begin{figure}[ht] \caption{Dispersion curves for an electric resonance in the local permittivity. The left panel is identical to that shown in Fig. \ref{fg_dcsimpleel}, as an assumption is made here that the medium is fully described by the \textit{local} permittivity $\epsrl(\omega)$ and permeability $\murl(\omega)$.\\
 The right panel additionally shows the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ as colour contours. The thin black line connects all points where $\epsLL(\omega, k) \,\omega^2 / k^2 = 1$. As a confirmation of the equivalence of this Landau-Lifshitz model with the classical one, it is shown to exactly overlap with the original green dispersion curve from Fig. \ref{fg_dcsimpleel} that was computed using the classical approach based on the Eq. (\ref{eq_dispeq_loc}). } \label{fg_dcllel} \centering  %% TODO refto
 	\includegraphics[width=17cm]{img/dispersion_landau_lifshitz/dispersion_ll_el.pdf}
-\end{figure}\clearpage
+\end{figure}
 \begin{figure}[ht] \caption{\todo{Magnetic resonance in L-L view of a local medium}} \label{fg_dcllmag} \centering  %% TODO refto
 	\includegraphics[width=17cm]{img/dispersion_landau_lifshitz/dispersion_ll_mag.pdf}
 \end{figure}
@@ -510,16 +506,14 @@ The right panel additionally shows the Landau-Lifshitz permittivity $\epsLL(\ome
 	\includegraphics[width=17cm]{img/dispersion_landau_lifshitz/dispersion_ll_elmag.pdf}
 \end{figure}
 
-In this customary symmetric approximation of local media, both the electric permittivity and permeability in Eq. (\ref{eq_eps_loc}) are composed of two terms, one caused by the immediate response of vacuum, and another by the response of matter. In nonlocal media, both functions depend on the wavevector $\kk$, making the solution of Maxwell equations more complicated.
-
-Here, we will show here that the magnetic response can be fully expressed by a certain form of $\epsrn(\omega, \kk)$ dependence on $\kk$. The spatial-dispersive function $\epsrn(\omega, \kk)$ will then consist of
+Here, we will show that the magnetic response can be fully expressed by a certain form of $\epsrn(\omega, \kk)$ dependence on $\kk$. The spatial-dispersive function $\epsrn(\omega, \kk)$ will then consist of
 \begin{enumerate}
  \item{the component caused by the immediate electric response of vacuum,} 
  \item{the component caused by the electric response of matter,}
  \item{a new component fully accounting for the \textit{magnetic} response of matter, thanks to a particular shape of its spatial dispersion.}
  \item{Additionally, the spatial dispersion allows to describe other phenomena that can not be described by the local theory.}
 \end{enumerate}
-The magnetic permeability becomes a mere constant of the magnetic response of vacuum $\murll(\omega, \kk) = 1$, thus reducing the complexness of the computation. %% [as in Eq. (\ref{eq_ce})]
+The magnetic permeability becomes a mere constant of the magnetic response of vacuum $\muLL(\omega, \kk) := 1$, thus reducing the complexness of the computation. %% [as in Eq. (\ref{eq_ce})]
 
 Repeating the Maxwell equation (\ref{eq_me4}) that links the magnetic field $\HH$ with the electric induction $\D$, 
 \begin{equation} \nabla \times \HH =  \frac{\partial \D} {\partial t}, \tag{\ref{eq_me4} \again} \end{equation}
